use .get(0) as to fix compilation issues